# coronagraphoto

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  IMPLEMENTATION_SUMMARY.md  README.md  SOURCE_AWARE_ARCHITECTURE.md  correct_physics_example.py  pyproject.toml  setup.cfg  sim_star_cor.py  simple_verification.py  source_aware_example.py  validation.py  verification_script.py
.github/workflows/: publish-to-pypi.yml  tests.yml
coronagraphoto/: __init__.py  coronagraph.py  logger.py  observation.py  observations.py  observing_scenario.py  util.py
docs/: conf.py  development_strategy.md  functional_approach.md  fundamental_concepts.md  index.md  installation.md  propagate_architecture_summary.md  propagate_pipeline_implementation_code.md  propagate_pipeline_implementation_guide.md  refactor_architecture.md  refactoring_thoughts.md  simulating_zodi_with_telescope_orbit.md
docs/explanation/: architecture.md  performance.md  rate_vs_readout.md
input/coronagraphs/demo/: coro_perf.fits  offax_psf_offset_list.fits  sky_trans.fits  stellar_intens_diam_list.fits
input/settings/: example.toml
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
src/: _convolve.pyx  convolve.c  convolve.h  convolve.h.gch  test.c
src/core/: ARCHITECTURE_DEVIATIONS.md  IMPLEMENTATION_SUMMARY.md  README.md  example_usage.py  requirements.txt
src/core/coronagraphoto/: __init__.py  data_models.py  light_paths.py  observation.py  observatory.py  reduction.py  source_aware_paths.py
src/core/coronagraphoto/docs/: LIGHT_PATH_PATTERNS.md  REAL_INTEGRATION_SUMMARY.md
src/core/coronagraphoto/examples/: path_patterns.py  real_integration_example.py
src/core/coronagraphoto/tests/: test_path_patterns.py
src/core/tests/: test_integration.py  test_observation.py
src/coronagraphoto/: __init__.py  composite.py  constants.py  conversions.py  coronagraph.py  datasets.py  detector.py  loaders.py  logger.py  observation.py  observations.py  observing_scenario.py  optical_elements.py  post_processing.py  processing_config.py  render_engine.py  settings.py  simulation.py  speckle_map.py  util.py
src/coronagraphoto/core/: __init__.py  exposure.py  optical_elements.py  optical_path.py  simulation.py  sky_scene.py  sources.py  zodi_sources.py
src/coronagraphoto/deprecated/: logger.py  observations.py  observing_scenario.py  settings.py  speckle_map.py  util.py
src/coronagraphoto/loaders/: __init__.py  exovista.py
src/coronagraphoto/optical_elements/: __init__.py  coronagraph.py  detector.py  optical_filters.py  primary.py  throughput_elements.py
src/coronagraphoto/transforms/: __init__.py  image_transforms.py  map_coordinates.py  orbital_mechanics.py
src/coronagraphoto/util/: composite.py  zodiacal_light.py
tests/: __init__.py  conftest.py  datasets.py  helpers.py  test_conversions.py  test_detector.py  test_exposure.py  test_optical_elements.py  test_optical_path.py  test_simulation.py  test_sources.py  test_speckle.py  test_transforms.py  test_zodi_sources.py  test_zodiacal_light_utils.py
tests/integration/: __init__.py  test_exovista_forward.py  test_real_coronagraph.py  test_real_yip_forward.py  test_zodi_with_observatory.py
tests/validation/: __init__.py  test_physics.py  test_system_physics.py
