[build-system]
requires = ['hatchling', "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "coronagraphoto"
version = "0.1.1"
description = "A python library to simulate coronagraphic observations of exoplanets."
authors = [{ name = "Corey Spohn", email = "corey.a.spohn@nasa.gov" }]
dynamic = ['readme']
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "astropy",
  "exoverses",
  "lod_unit",
  "matplotlib",
  "numpy",
  "numba",
  "pandas",
  "photutils",
  "synphot",
  "tqdm",
  "xarray",
]

[project.urls]
Homepage = "https://github.com/CoreySpohn/coronagraphoto"
Issues = "https://github.com/CoreySpohn/coronagraphoto/issues"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
