[build-system]
requires = ['hatchling', "hatch-fancy-pypi-readme", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coronagraphoto"
description = "A python library to simulate coronagraphic observations of exoplanets."
authors = [{ name = "Corey Spohn", email = "corey.a.spohn@nasa.gov" }]
dynamic = ['readme', 'version']
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "astropy",
  "exoverses",
  "lod_unit",
  "matplotlib",
  "numpy",
  "numba",
  "pandas",
  "photutils",
  "synphot",
  "tqdm",
  "xarray",
]
[project.optional-dependencies]
dev = ["mypy", "ruff", "pre-comi"]
docs = [
  "sphinx",
  "myst-parser",
  "sphinx-book-theme",
  "sphinx-autoapi",
  "sphinx_autodoc_typehints",
]
test = ["nox", "pytest", "hypothesis", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/CoreySpohn/coronagraphoto"
Issues = "https://github.com/CoreySpohn/coronagraphoto/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/coronagraphoto/_version.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[tool.ruff]
select = ["D", "I"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
overrides = [{ module = "toml.*", ignore_missing_imports = true }]
