[metadata]
name = coronagraphoto
version = 0.1.0
description = A python library to simulate coronagraphic observations of exoplanets
long_description = file: README.md
long_description_content_type = text/markdown
author = Corey Spohn, Jens Kammerer
author_email = corey.a.spohn@nasa.gov
url = https://github.com/CoreySpohn/coronagraphoto
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
license_files = LICENSE

[options]
packages = find:
install_requires = 
  numpy
  pandas
  astropy
  matplotlib
  lod_unit

# [options.ext_modules]
# cy_convolve = src/_convolve.pyx
#               src/convolve.c = src/convolve.c
